--- a/src/app/transaction/transaction.component.css
+++ b/src/app/transaction/transaction.component.css
@@ -147,9 +147,6 @@ tr.trans-element-row:not(.tpLinks-expanded-row):active {
   background-color: #374151 !important;
   color: #60a5fa !important;
 }
-  background-color: #1f2937 !important;
-  color: #e5e7eb !important;
-}
 
 :host-context(body.app-theme-dark) tr.trans-element-row:hover {
   background-color: #374151 !important;
